--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,8 +5,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
-    line-height: 14px;
-    /* identical to box height, or 140% */
+    line-height: 140%;
     letter-spacing: 1.5px;
     text-transform: uppercase;
 }
