--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
-    min-height: 1000px;
-    background: #2A2C2F;
-    font-family: 'Inter', Arial, sans-serif;
-    color: #FFFFFF;
+  min-height: 1000px;
+  background: #2a2c2f;
+  font-family: 'Inter', Arial, sans-serif;
+  color: #ffffff;
 }
