--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,14 @@
 .footer__link {
-    color: #FFFFFF;
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 112%;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 112%;
 }
 
 @media screen and (max-width: 700px) {
-    .footer__link {
-        font-size: 24px;
-        line-height: 100%;
-    }
+  .footer__link {
+    font-size: 24px;
+    line-height: 100%;
+  }
 }
