--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,15 @@
 .header__lang-link {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    color: #FFFFFF;
-    text-decoration: unset;
-    cursor: pointer;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #ffffff;
+  text-decoration: unset;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
-    .header__lang-link {
-        font-size: 18px;
-        line-height: 20px;
-    }
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
