--- a/blocks/content/__section/_narrow/content__section_narrow.css
+++ b/blocks/content/__section/_narrow/content__section_narrow.css
@@ -1,18 +1,18 @@
-.padding-narrow {
+.content__section_narrow {
   padding: 0 148px 0 148px;
 }
 @media screen and (max-width: 1050px) {
-  .padding-narrow {
+  .content__section_narrow {
     padding: 0 48px 0 48px;
   }
 }
 @media screen and (max-width: 1023px) {
-  .padding-narrow {
+  .content__section_narrow {
     padding: 0 24px 0 24px;
   }
 }
 @media screen and (max-width: 767px) {
-  .padding-narrow {
+  .content__section_narrow {
     padding: 0 16px 0 16px;
   }
 }
