--- a/blocks/content/__section/_wide/content__section_wide.css
+++ b/blocks/content/__section/_wide/content__section_wide.css
@@ -1,15 +1,15 @@
-.padding-wide {
+.content__section_wide {
   padding: 0 48px 0 48px;
 }
 
 @media screen and (max-width: 1023px) {
-  .padding-wide {
+  .content__section_wide {
     padding: 0 24px 0 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .padding-wide {
+  .content__section_wide {
     padding: 0 16px 0 16px;
   }
 }
