--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -3,6 +3,10 @@
   padding-right: 18px;
 }
 
+.footer__item:last-child {
+  padding-right: 0;
+}
+
 @media screen and (max-width: 700px) {
   .footer__item {
     padding-bottom: 32px;
