--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,23 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  padding-top: 92px;
-  padding-bottom: 24px;
+  /* padding-top: 92px;
+  padding-bottom: 24px; */
+  width: calc(100% - 96px);
+  padding: 92px 48px 24px 48px;
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    padding-top: 88px;
+    width: calc(100% - 48px);
+    padding: 88px 24px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    width: calc(100% - 32px);
+    padding: 64px 16px 24px 16px;
   }
 }
 
