--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,17 @@
   color: #ffffff;
   text-decoration: unset;
   cursor: pointer;
+  opacity: 1;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
+  transition: 0.8s;
+}
+
+.header__lang-link:not(:hover) {
+  opacity: 1;
+  transition: 0.8s;
 }
 
 @media screen and (max-width: 767px) {
