--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,7 @@
 .page {
-  min-height: 1000px;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
   background: #2a2c2f;
   font-family: 'Inter', Arial, sans-serif;
   color: #ffffff;
