--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,6 +2,7 @@
   grid-area: image;
   max-width: 460px;
   width: 100%;
+  height: auto;
   object-fit: cover;
   display: block;
 }
@@ -9,12 +10,56 @@
 @media screen and (max-width: 1279px) {
   .place__image {
     max-width: 440px;
+    min-width: 440px;
   }
 }
+
+@media screen and (max-width: 1190px) {
+  .place__image {
+    max-width: 410px;
+    min-width: 410px;
+  }
+} 
+
+@media screen and (max-width: 1100px) {
+  .place__image {
+    max-width: 380px;
+    min-width: 380px;
+  }
+} 
+
+@media screen and (max-width: 1150px) {
+  .place__image {
+    max-width: 420px;
+    min-width: 420px;
+  }
+} 
+
+@media screen and (max-width: 1023px) {
+  .place__image {
+    max-width: 420px;
+    min-width: 420px;
+  }
+} 
+
+@media screen and (max-width: 900px) {
+  .place__image {
+    max-width: 380px;
+    min-width: 380px;
+  }
+} 
+
+@media screen and (max-width: 800px) {
+  .place__image {
+    max-width: 340px;
+    min-width: 340px;
+  }
+} 
 
 @media screen and (max-width: 767px) {
   .place__image {
     max-width: calc(100% + 32px);
+    min-width: calc(100% + 32px);
     width: calc(100% + 32px);
     margin-left: calc(0vh - 16px);
   }
