--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,4 +5,15 @@
   text-decoration-line: underline;
   color: #ffffff;
   padding-top: 12px;
+  opacity: 1;
+}
+
+.place__link:hover {
+  opacity: 0.8;
+  transition: 0.8s;
+}
+
+.place__link:not(:hover) {
+  opacity: 1;
+  transition: 0.8s;
 }
