--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -14,10 +14,21 @@
   }
 }
 
+@media screen and (max-width: 1190px) {
+  .place__title {
+    max-width: 410px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .place__title {
+    max-width: 380px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .place__title {
     max-width: 340px;
-    font-weight: 900;
     font-size: 42px;
     line-height: 110%;
   }
